gap fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -160,9 +160,14 @@ ul {
 .team-list{
     display: flex;
     flex-direction: row;
-    gap:30px;
     justify-content: center;
     padding-left:0;
+    gap:30px;
+}
+.team-list-items{
+}
+.team-list-figure{
+    margin:0;
 }
 .team-card{
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
